[package]
name = "opentracing-rs"
description = "opentracing for rust"
version = "0.1.0"
license = "MIT"
authors = ["ccc13 <currantxx@gmail.com>"]
edition = "2018"

[workspace]
members = [
  "opentracing",
  "opentracing-jaeger"
]

[dependencies]
opentracing = { path = "opentracing", version = "0.1.0" }
opentracing-jaeger = { path = "opentracing-jaeger", version = "0.1.0" }

[dev-dependencies]
futures = "0.1.25"
tokio = "0.1.13"
