[package]
name = "opentracing-rs"
description = "opentracing for rust"
version = "0.1.2"
license = "MIT"
authors = ["ccc13 <currantxx@gmail.com>"]
repository = "https://github.com/ccc13/opentracing-rs"
edition = "2018"

[badges]
travis-ci = { repository = "ccc13/opentracing-rs" }

[workspace]
members = [
  "core",
  "jaeger"
]

[dependencies]
opentracing-rs-core = { path = "core", version = "0.1.0" }
opentracing-rs-jaeger = { path = "jaeger", version = "0.1.0" }

[dev-dependencies]
futures = "0.1"
tokio = "0.1"
