[package]
name = "opentracing-rs-jaeger"
description = "jaeger for opentracing"
version = "0.1.0"
license = "MIT"
authors = ["ccc13 <currantxx@gmail.com>"]
edition = "2018"

[dependencies]
tokio = "0.1.13"
futures = "0.1.25"
rand = "0.6"
ordered-float = "1.0.1"
thrift = "0.0.4"
try_from = "0.3.2"

opentracing-rs-core = { path = "../core", version = "0.1.0" }
